[package]
authors = ["Maximilian Krüger <kruemaxi@gmail.com>", "Jason Duffy <jasonsduffy@gmail.com"]
description = "Computes the short-time fourier transform on streaming data"
keywords = ["dsp", "fft", "stream", "data", "fourier"]
license = "MIT"
name = "stft"
readme = "README.md"
version = "0.3.0"
edition = "2018"

[dependencies]
apodize = "1.0.0"
rustfft = "4.0.0"
strider = "0.1.3"
